--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -28,75 +28,39 @@ $\newcommand{\SD}{\mathrm{SD}}$
 
 \section{Introduction} 
 
-Wrinkle formation in Australian Merino sheep skin is a phenomenon with serious economic and political consequences.  It has long been known (Seddon, Belschner, and Mulhearn (1931)~\cite{sedd:31}) that wrinkled sheep are more susceptible to blowfly strike. The use of the {\em mulesing} operation to control flystrike in Merino sheep has recently been the subject of intense animal ethics scrutiny, and no effective alternative management option has appeared.
-The most effective long term solution would seem to be to breed the wrinkle out of Merino sheep. This approach has met with resistance from some Australian Merino breeders who feel that the extra skin surface area of wrinkled sheep is necessary to achieve high levels of wool production. Breeding plans which include some culling on wrinkle usually do not lead to its complete elimination (for example Turner Dolling and Kennedy (1968)~\cite{turn:68}).
+Wrinkle formation in Australian Merino sheep skin is a phenomenon with serious economic and political consequences.  It has long been known (Seddon, Belschner, and Mulhearn (1931)~\cite{sedd:31}) that wrinkled sheep are more susceptible to blowfly strike. The use of the {\em mulesing} operation to control flystrike in Merino sheep has recently been the subject of intense animal ethics scrutiny. No effective alternative management option has appeared.
+The most effective long term solution would seem to be to breed the wrinkle out of Merino sheep. This approach has sometimes met with resistance from some Australian Merino breeders who feel that the extra skin surface area of wrinkled sheep is necessary to achieve high levels of wool production. Breeding plans which include some culling on wrinkle usually do not lead to its complete elimination (for example Turner Dolling and Kennedy (1968)~\cite{turn:68}).
 
-This study  is an attempt to go back to the basic biology of wrinkle formation, to see whether we can understand the tissue structure of a wrinkle, and to see if that suggests  a better approach breeding of wrinkle-free sheep  without lowering productivity or adversely affecting wool quality. 
+This study  is an attempt to go back to the basic biology of wrinkle formation, to see whether we can understand the tissue structure of a wrinkle, and to see if that suggests  a better approach breeding of wrinkle-free sheep,  without lowering productivity or adversely affecting wool quality. 
 
 There have been very few attempts to define what a wrinkle actually is. The early work of Carter(1943)~\cite{cart:43} went as far as describing and naming all the folds on the neck, body, and breech, and developed a set of photographic scores for degree of wrinkle. Carter used the terms {\em fold} and {\em wrinkle} interchangeably, but he distinguished the small {\em pin wrinkles} present in all Merinos, from the larger folds which develop to varying degrees as the sheep matures. From this early start, there is, somewhat surprisingly, nothing on the biology of wrinkles, until the study of Mitchell et al(1984)~\cite{mitc:84}. 
 
-The Mitchell et al(1984)~\cite{mitc:84} paper defines five tissue layers in sheep skin -  Layer 1; epidermis, Layer 2; papillary dermis, Layer 3; reticular dermis, Layer 4;  containing muscle, collagen and elastin, and Layer 5; adipose tissue. These are illustrated in Figure ~\ref{fig:mitchell}
-\input{figmitchell.tex}
-Only the first 3 layers curve upward in a folded section of skin, layers 4 and 5 remain straight. This can be seen in Figure ~\ref{fig:mitchell}. Mitchell et al showed that if layers 4 and 5 were removed from a sheep skin, then the folded sections relaxed and flattenned. The implication is that the first 3 layers in a fold are longer (in the direction across the wrinkle) than the underlying layers, so that the collagen binding layer 4 holds the upper 3 layers in the curved or folded shape.
-
-Even less is known about wrinkle development. Merino lambs are born with visible wrinkles.  A somewhat obsure reference (Bogolyubsky (1940)~\cite{bogo:40}) asserts that wrinkles were observed forming in foetal skin of Karakul and Merino lambs at around 100 days of gestation. That is about the time at which the secondary derived follicles initiate. There are no other studies of foetal wrinkle development, but there is a considerable literature on follicle development ( see Fraser and Short(1960)~\cite{fras:60} and Maddocks and Jackson(1988)~\cite{madd:88} and Ryder and Stevenson(1968)~\cite{ryde:68} for reviews). There is some literature on collagen development in sheep skin, and we will look at that below.
-
-What is investigated here is that the amount and type ( and maybe timing and arrangement in the skin) of collagen development might be a factor involved with both wrinkle development and follicle development. So what is known about collagen? Well, it is already there in the foetal skin at the time follicles develop (Knight et al (1993) ~\cite{knig:93}). 
-WHICH LAYERS?
- These authors distinguish two collagen types ( Type III or 'soft' collagen, and Type I or 'hard' collagen) and note  that Type III is highest at 75 days of gestation, and falls progressively as the foetus develops, while Type I is low at day 75 and rises to over 50 percent by birth. Collagen fibres are formed from cells called {\em fibroblasts}. At 75-80 days the fibroblasts appear as plump, immature cells surrounded by reticular collagen fibres which are composed of Type III collagen. By birth the fibroblasts have matured  and the collagen fibres may be intermeshed to varying degrees. If the fine reticular fibre pattern remains, it is soft collagen, if the fibres intermesh the collagen tissue is hardened to various degrees. 
-
-
-The arrangement (location) of collagen in the skin is also important. In adult skin, Mitchell(1984)~\cite{mitc:84} distinguishes 5 layers in a vertical section of sheep skin
+The Mitchell et al(1984)~\cite{mitc:84} paper defines five tissue layers in sheep skin.
 \begin{description}
 \item[Layer1] epidermis is mainly keratinised protein
 \item[Layer2] contains wool follicles and accessory glands, and is part of the dermis. Sometimes called {\em papillary layer}.
 \item[Layer3] layers 2 and 3 together called 'dermis' . Contains fibrous proteins, collagen, and elastin. Sometimes called {\em reticular layer} although the structure is not always reticular, but may be interwoven.
-\item[Layer4] contains volunntary muscle, collagen and elastin
-\item[Layer5] fat tissue
+\item[Layer4] contains voluntary muscle, collagen and elastin
+\item[Layer5] adipose tissue
 \end{description}
-Mitchell notes that Layer2 is much weaker than Layer 3 ( collagen not as hard). When wrinkles or folds occur in the skin, Layers 1,2, and 3 buckle up into a fold, while Layers 4-5 are straight. It appears as if wrinkles are formed either by an overgrowth of Layers 1-3, or by a shrinkage or tightening of Layer 4. Mitchell has demonstrated this conclusively by showing that if Layer4 (and Layer 5) are dissected away from a skin specimen with wrinkles, the folds in Layers 1-3 flatten out. So in a wrinkled sheep, Layer 4 is holding the skin under some tension, which relaxes when Layer 4 is removed.
+ These are illustrated in Figure ~\ref{fig:mitchell}
+\input{figmitchell.tex}
+Only the first 3 layers curve upward in a folded section of skin, layers 4 and 5 remain straight. This can be seen in Figure ~\ref{fig:mitchell}. Mitchell et al note that Layer2 is much weaker than Layer 3 ( collagen not as hard). When wrinkles or folds occur in the skin, Layers 1,2, and 3 buckle up into a fold, while Layers 4-5 are straight. It appears as if wrinkles are formed either by an overgrowth of Layers 1-3, or by a shrinkage or tightening of Layer 4. Mitchell has demonstrated this by showing that if Layer4 (and Layer 5) are dissected away from a skin specimen with wrinkles, the folds in Layers 1-3 flatten out. So in a wrinkled sheep, Layer 4 is holding the skin under some tension, which relaxes when Layer 4 is removed.
 
-So there is some link between collagen development in the skin, and wrinkle formation. If the collagen grows unevenly across the boundary between Layers 3 and 4, the top 3 layers form a fold to accomodate. Since wrinkles mostly form in rows, this unevenness of collagen development must be in one dimension - if it were 2 dimensional the upper 3 layers of skin would form a lump, rather than a fold. There is no reported observation of directional unevenness of collagen across Layers 3/4, but it must be so, or we would get lumps rather than folds.
+Even less is known about wrinkle development. Merino lambs are born with visible wrinkles.  A somewhat obsure reference (Bogolyubsky (1940)~\cite{bogo:40}) asserts that wrinkles were observed forming in foetal skin of Karakul and Merino lambs at around 100 days of gestation. That is about the time at which the secondary derived follicles initiate. Carter(1943)~\cite{cart:43} presents a photograph of the skin surface of a 10 day old Merino lamb (Plate 13 Figure 1) which clearly shows small {\em pin wrinkles}. There are no other studies of foetal wrinkle development, but there is a considerable literature on follicle development ( see Fraser and Short(1960)~\cite{fras:60} and Maddocks and Jackson(1988)~\cite{madd:88} and Ryder and Stevenson(1968)~\cite{ryde:68} for reviews). There is some literature on collagen development in sheep skin, and we will look at that below.
 
-We need to also ask if there are links between collagen development and follicle development. 
+What is to be investigated in this study is that the amount and type ( and maybe timing and arrangement in the skin) of collagen development might be a factor involved with both wrinkle development and follicle development. So what is known about collagen? Well, it is already present in the dermis (layers 2 and 3) of foetal skin at the time follicles develop (Knight et al (1993) ~\cite{knig:93}). 
+ These authors distinguish two collagen types ( Type III or 'soft' collagen, and Type I or 'hard' collagen) and note  that Type III is highest at 75 days of gestation, and falls progressively as the foetus develops, while Type I is low at day 75 and rises to over 50 percent by birth. Collagen fibres are formed from cells called {\em fibroblasts}. At 75-80 days the fibroblasts appear as plump, immature cells surrounded by reticular collagen fibres which are composed of Type III collagen. By birth the fibroblasts have matured  and the collagen fibres may be intermeshed to varying degrees. If the fine reticular fibre pattern remains, it is soft collagen, if the fibres intermesh the collagen tissue is hardened to various degrees. 
+
+Collagen development, secondary follicle development and wrinkle formation  all seem to commence at the same time of around 100 days of foetal age.  Follicle development ceases at around birth ( 150 days) but development of collagen and wrinkles continues into the adult sheep. In this study we look at the end points of development - that is we study collagen and follicles in adult sheep with and without wrinkles. That will not reveal the details of development, but it should make clear any obvious associations between collagen, wrinkles, and follicles.
 
 \section{Materials and Methods}
 \subsection{Sheep studied}
-This is a small study. A total of 106 sheep, representing fine, medium, and strong wool strains of Merino, were sampled from 5 flocks over the period 1988 to 2003. The flocks and sheep were chosen to ensure that all four grades of  SkinType (as defined by Watts et al (2017)~\cite{watt:17}) were well represented. The four SkinType grades contain information on skin wrinkle, but are not wrinkle alone.
 
 \subsection{Measurements}
-The following measurements and scores were available
-\begin{description}
-\item[SkinType] visual scores for sheep skin type. Four grades SRS, semi-SRS, flat, and tight, as defined by Watts et al (2017)~\cite{watt:17}.
-\item[TST] total skin thickness in mm. Measured with a ruler graduate in 0.1 mm divisions at 3x magnification on the midside skin sample trimmed of wool stuble and subdermal fat. It consists of epidermis, papillary layer, and reticular layer (layers 1 to 3).
-\item[CST] compressed skin thickness in mm. Measured on the trimmed sample with a Mitutoyo ballpoint depth guage ( graduated in 0.1 mm divisions) at four sites. Analyses are of the mean CST over 4 sites.
-\item[CMP] compressibility as a percentage. Calculated from CST and TST as $CMP = 100(TST-CST)/TST$. Measures the reduction in thickness under compression as a percentage of the uncompressed thickness.
-\item[SkinSoft] skin softness score or ease with which the skin bends or buckles. Five grades (1=hard, unable to bend), to (5=supple, bends easily). Assessed by manually bending the trimmed skin sample in two directions ( north-south = across the rows of follicle groups) and (east-west = along the rows of follicle groups).
-\item[S/P] ratio of secondary to primary follicle numbers. This ratio is normally used as a measure of secondary follicle density which is independent of skin expansion during growth. Measured on skin sections.
-\item[Fn] follicle number per unit area in follicles per $mm^{2}$. Measured on skin sections with a correction for shrinkage during processing
-\item[Dp] mean fibre diameter of secondary fibres in $\mu m$. Measured on skin sections.
-\item[DpSD] standard deviation of secondary fibre diameters in $\mu m$. Measured on skin sections.
-\end{description}
 
 \subsection{Interpretation of measurements}
-Some care is needed in defining what these measurements actually represent. The collagen measurements should be seen as follows
-\begin{description}
-\item[TST] amount of collagen in the dermis ( ie layers 2 and 3)
-\item[CST] would reflect both the amount of collagen ( as in TST) and its softness
-\item[CMP] compressibility should reflect collagen softness only, since it is relative to TST.
-\item[SkinSoft] bending a sheet of material compresses one side and extends the other. So this score should also reflect compressional softness of collagen. There may however be some effect of collagen thickness, since a thick sheet does not bend as easily as a thin sheet.
-\end{description}
 
-The SkinType scores do not only reflect degree of skin wrinkle. We repeat the score descriptions here for clarification
-
-\begin{description}
-\item [tight] sheep with fleeces consisting of thick and stiff staples. The fleece is often excessively greasy, short in length and forms “closed “ backs.  The skin is very thick and forms wrinkles to varying degrees over the body.  No attempt was made to subdivide this class on degree of wrinkle .
-\item[flat] relatively plain bodied sheep with fleeces consisting of lightweight staples. The wool is non-lustrous and has low crimp amplitude. There are two subtypes: a soft and marginally loose skin with widely spaced fibre bundles and thin staples; and a thick and taut skin with flat, wide staples that are not soft. 
-\item[semi-SRS] plain bodied sheep with fleeces consisting of long, thin staples. Fibre bundles are not present. The wool is soft and semi-lustrous. The crimp amplitude is not as pronounced as for SRS animals. The skin is loose.
-\item[SRS] plain bodied sheep with fleeces consisting of very long, and closely packed  fibre bundles and thin staples. The wool is very soft, lustrous and has high crimp amplitude (“deep” crimp) and low crimp frequency (“bold” crimp). In long wool, the fleece parts along the backline. The skin is very loose.
-\end{description}
-
-So only the {\em tight} SkinType sheep are wrinkled. The other three grades are distinguished on skin looseness and thickness. Looseness means the opposite of taut skin and able to me moved laterally on the sheep. Thickness is obvious and would be expected to relate to amount of collagen. Looseness is not so obvious. It means the skin is larger than the underlying tissues so the skin surface area exceeds the smooth body surface area, but not by forming folds or wrinkles. It is not clear where the looseness is in relation to the 5 skin layers defined above. Wool properties are also involved in assessing the higher grades. 
 
 \subsection{Statistical Methods}
 Data were imported into the R statistical program~\cite{rprog:13} and analysed using the {\em lm()} function for regressions, and the {\em aov()} function for analysis of variance.
