start on results

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -30,7 +30,7 @@ $\newcommand{\SD}{\mathrm{SD}}$
 \section{Introduction} 
 
 Wrinkle formation in Australian Merino sheep skin is a phenomenon with serious economic and political consequences.  It has long been known (Seddon, Belschner, and Mulhearn (1931)~\cite{sedd:31}) that wrinkled sheep are more susceptible to blowfly strike. The use of the {\em mulesing} operation to control flystrike in Merino sheep has recently been the subject of intense animal ethics scrutiny. No effective alternative management option has appeared.
-The most effective long term solution would seem to be to breed the wrinkle out of Merino sheep. This approach has sometimes met with resistance from some Australian Merino breeders who feel that the extra skin surface area of wrinkled sheep is necessary to achieve high levels of wool production. Breeding plans which include some culling on wrinkle usually do not lead to its complete elimination (for example Turner Dolling and Kennedy (1968)~\cite{turn:68}).
+The most effective long term solution would seem to be to breed the wrinkle out of Merino sheep. This approach has at times met with resistance from some Australian Merino breeders who feel that the extra skin surface area of wrinkled sheep is necessary to achieve high levels of wool production. Breeding plans which include some culling on wrinkle usually do not lead to its complete elimination (for example Turner Dolling and Kennedy (1968)~\cite{turn:68}).
 
 This study  is an attempt to go back to the basic biology of wrinkle formation, to see whether we can understand the tissue structure of a wrinkle, and to see if that suggests  a better approach breeding of wrinkle-free sheep,  without lowering productivity or adversely affecting wool quality. 
 
@@ -108,6 +108,12 @@ For PSR collagen analysis, the 40x objective was employed at a fixed
 exposure to take high power images of 5 random deep dermal fields of
 view for computational analysis. 
 
+\begin{verbatim}
+ [ Sanaz it seems to me that these 5 random fields would have been
+ chosen within the red stained areas with collagen present. 
+ I think we should say so]
+\end{verbatim}
+
 The images for each sample were then uploaded for quantitative analysis
 via the ImagePro Plus (Media Cybernetics, USA) 7.1 software in which
 thresholds were set to count all pixels comprising of the red staining
@@ -117,6 +123,32 @@ graphed.
 
 Polarised light was employed in order to try and determine the type of
 collagen present within each of the samples.
+\begin{verbatim}
+[Sanaz, you made a comment about this on Jim's last draft.
+
+The yellow and green reflectances are likely to indicate soft (Type III)
+ collagen (Sanaz, please check this statement).
+ Need to be careful here Jim, as no one has been able to definitively 
+ prove the birefringences of PSR staining with collagen fibres,
+ and some of the literature contradicts itself.
+ I can pull a few papers to reference as a guide to the reviewers?
+
+and this
+
+Birefringence measurements of PSR stained skin sections indicate that
+ nearly all  (…. %) of the collagen sheets in the subfollicular
+ layer of the papillary dermis have the deep red light reflectance 
+indicative of hard (type I) collagen. (Sanaz, please check this statement).
+ Again Jim, we have to tread carefully here making definitive
+ statements based on colour birefringence. We can certainly point
+ out that the thicker fibres were red, and the thinner fibres more
+ green, with some yellowish-orange colours in between.
+
+Can you make some statement that is either definitive or indicative
+ and give a reference please?
+
+I think it belongs here in the Methods, not mixed up with Results where Jim had it.
+\end{verbatim}
 
 \subsubsection{Vertical skin sections}
 Vertical skin sections, approximately 0.3 millimetres wide, were cut
@@ -154,6 +186,13 @@ papillary dermis.
 Data were imported into the R statistical program~\cite{rprog:13} and analysed using the {\em aov()} function for analysis of variance.
 
 \section{Results}
+We follow the path of looking first at overall morphology of skin specimens, then at the details of collagen structure, and finally at other related measurements
+
+\subsection{Skin tissue Morphology}
+The pairs of wrinkle free and wrinkled sheep from each flock in Trial 1 showed consistent visual differences in their tissue structure. Figure~\ref{fig:trial1he} shows vertical sections stained with H-E from the wrinkled and wrinkle-free pair of sheep from flock 1.
+
+\input{figtrial1he.tex}
+
 
 
 \clearpage
