Results section on macro observations

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/figtrial1he.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/figtrial1he.tex
@@ -3,16 +3,20 @@
 %\usepackage{caption,rotating}
 %\begin{document}
 
-\begin{figure}[!h]
-%\begin{turn}{90}
-\begin{minipage}[c][\textwidth][c]{\textheight}
- \subfigure[Sheep w479-2 Wrinkled]{\includegraphics[scale=0.20]{w479-2-rigid.jpg}}\vfill
+\begin{figure}[p]
+\centering
+ \subfigure[Plate (i) Sheep w479-2 Wrinkled]{
+    \label{fig:trial1he(i)}
+    \includegraphics[scale=0.20]{w479-2-rigid.jpg}
 % \includegraphics[width=1.0\textwidth]{w479-2-rigid.jpg}
- \subfigure[Sheep x490-2 Wrinkle-free]{\includegraphics[scale=0.20]{w490-2-supple.jpg}}
-  \caption{Vertical sections from a wrinkled (a) and a wrinkle-free (b) sheep from Trial 1 flock 3 stained with H-E. }
+  }
+ \subfigure[Plate (ii) Sheep x490-2 Wrinkle-free]{
+    \label{fig:trial1he(ii)}
+    \includegraphics[scale=0.20]{w490-2-supple.jpg}
+  }
+  \caption{Vertical sections from a wrinkled (i) and a wrinkle-free (ii)  sheep from Trial 1 flock 2 stained with H-E. }
+\vfill
   \label{fig:trial1he}
-\end{minipage}
-%\end{turn}
 \end{figure}
 
 %\end{document}
