--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -9,7 +9,7 @@
 \usepackage{tikz}
 \usepackage{bm,longtable}
 \usepackage{textcomp}
- 
+
 
 \title{Histology of collagen in Merino sheep skin and its association with skin wrinkle formation and follicle curvature }
 \author{The late J.E. Watts S. Maleki, P.G. Swan, J. Gordon, and N. Jackson}
@@ -188,10 +188,24 @@ Data were imported into the R statistical program~\cite{rprog:13} and analysed u
 \section{Results}
 We follow the path of looking first at overall morphology of skin specimens, then at the details of collagen structure, and finally at other related measurements
 
+\subsection{Macro observations on biopsy specimen}
+In Table~\ref{tab:macro} we present the suppleness scores and percent compressibility of specimens from the sheep from Trial 1.
+\input{tabmacro.tex}
+We see that the wrinkled sheep specimens were consistently less supple and less compressible than those of the wrinkle-free sheep.
+These differences in Suppleness and Compressibility were tested for significance in an analysis of variance shown in Table~\ref{tab:macrot1aov}
+\input{tabmacrot1aov.tex}
+The differences between skin types ( wrinkled and wrinkle-free) were significaant for both Suppleness and Compressibility. Flock differences were not significant.
+
 \subsection{Skin tissue Morphology}
-The pairs of wrinkle free and wrinkled sheep from each flock in Trial 1 showed consistent visual differences in their tissue structure. Figure~\ref{fig:trial1he} shows vertical sections stained with H-E from the wrinkled and wrinkle-free pair of sheep from flock 1.
+The pairs of wrinkle free and wrinkled sheep from each flock in Trial 1 showed consistent visual differences in their tissue structure. Figure~\ref{fig:trial1he} shows vertical sections stained with H-E from the wrinkled and wrinkle-free pair of sheep from flock 2.
 
 \input{figtrial1he.tex}
+
+The wrinkled sheep has a considerably greater amount of haematoxylin stained connective tissue in the lower dermis below the deepest follicle bulbs and to some extent in between the deepest bulbs. Also the follicles in the wrinkled sheep are at a variety of angles and are curved, as evidenced by the follicle shafts being sectioned and the follicle bulb being elliptical indicating sectioning at an angle. In contrast the wrinkle-free sheep has only a minimum amount of haematoxylin stained connective tissue below the follicle bulbs, and the sectioned follicles are more uniform. 
+These differences were consistent across all 6 flocks in Trial 1.
+
+Because the Trial 1 biopsy samples were trimmed before sectioning, we can not be sure if the apparent extra connective tissue in the wrinkled sheep extends right to the bottom of the lower dermis or into Layer 4. 
+
 
 
 
