add H-E image with 4 layers

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -204,7 +204,14 @@ The pairs of wrinkle free and wrinkled sheep from each flock in Trial 1 showed c
 The wrinkled sheep has a considerably greater amount of haematoxylin stained connective tissue in the lower dermis below the deepest follicle bulbs and to some extent in between the deepest bulbs. Also the follicles in the wrinkled sheep are at a variety of angles and are curved, as evidenced by the follicle shafts being sectioned and the follicle bulb being elliptical indicating sectioning at an angle. In contrast the wrinkle-free sheep has only a minimum amount of haematoxylin stained connective tissue below the follicle bulbs, and the sectioned follicles are more uniform. 
 These differences were consistent across all 6 flocks in Trial 1.
 
-Because the Trial 1 biopsy samples were trimmed before sectioning, we can not be sure if the apparent extra connective tissue in the wrinkled sheep extends right to the bottom of the lower dermis or into Layer 4. 
+Because the Trial 1 biopsy samples were trimmed before sectioning, we can not be sure if the apparent extra connective tissue in the wrinkled sheep extends right to the bottom of the lower dermis or into Layer 4.  We can check on this by looking at Trial 2 specimens, which were nt trimmed before sectioning. Figure~\ref{fig:trial2he} shows one example section whch is from a wrinkled sheep from Flock 1 of Trial 2.
+\input{figtrial2he.tex}
+
+It is clear from Figure~\ref{fig:trial2he} that the connective tissue in Layer 3 (lower or reticular dermis) does not extend further into Layer 4 (muscle layer). The muscle layer has only stained with the pink eosin counterstain and does not show the reticular structure of the connective tissue.
+
+We are therefore concerned with the nature of this connective tissue in the lower dermis only. We wish to quantify and qualify the way in which it differs between wrinkled and wrinkle-free sheep.
+
+\subsection{Detailed morphology of connective tissue} 
 
 
 
