Start collagen psr staining

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -212,6 +212,20 @@ It is clear from Figure~\ref{fig:trial2he} that the connective tissue in Layer 3
 We are therefore concerned with the nature of this connective tissue in the lower dermis only. We wish to quantify and qualify the way in which it differs between wrinkled and wrinkle-free sheep.
 
 \subsection{Detailed morphology of connective tissue} 
+The stain picrosirius red (PSR) was used to differentiate collagen from other components of connective tissue. Figure~\ref{fig:trial2psr} shows a section from the same sheep as Figure~\ref{fig:trial2he} examined with normal bright field microscopy. 
+\input{figtrial2psr.tex}
+The collagen is red. There is some collagen showing in the Layer 3 (papillary dermis), a dense band of collagen in Layer 3, and Layer 4 consists of yellow stained muscle tissue with a band of red collagen above and below it.  Fibres and follicle bulbs are stained yellow bty the picric acid component of PSR.
+
+So we can conclude that the large amount of connective tissue in Layer 3 of wrinkled sheep contains collagen. 
+
+\subsubsection{Amount of collagen}
+To quantify the amount of collagen in Layer 3, 5 fields under a 40x objective were chosen at random from within Layer 3 (reticular dermis) of each PSR stained section from each sheep in Trials 1 and 2. A typical image from one field is shown in Figure~\ref{fig:psr40x}.
+%\input{figpsr40x.tex}
+
+ The image analysis procedure described in the methods wa sused to count red stained pixels in each field. The mean red pixel count for each sheep is shown  in Figure~\ref{fig:redpixt1} for Trial 1 and Figure~\ref{fig:redpixt2} for Trial 2.
+%\input{figredpixt1.tex}
+%\input{figredpixt2.tex}
+Pixel counts are expressed as a percentage of the total number of pixels in the image taken with a 40x objective.
 
 
 
@@ -258,6 +272,9 @@ Jackson, N., Maddocks, I.G., Lax, J., Moore, G.P.M. and Watts, J.E. (1990) Merin
 
 \bibitem{jack:17b}
 Jackson, N. and Watts, J.E. (2017) What is known about the genetics of wrinkle score in Merino sheep? URL https://github.com/nevillejackson/Fleece-genetics/wrinkle/wrinkle.pdf
+
+\bibitem{kier:99}
+Kiernan, J.A.(1999) Histological and Histochemical Methods: Theory and Practice. Ed 3. Butterworth Heinemann, Oxford, UK
 
 \bibitem{knig:93}
 Knight, K.R., Lepore, D.A., Horne, R.S., Ritz, M., Kumta, S. and O'Brian, B.M. (1993) Collagen content of uninjured skin and scar tissue in foetal and adult sheep. Int. J. Exp. Pathol. 74(6):583-591
